--- a/frontend/des_frontend/pubspec.yaml
+++ b/frontend/des_frontend/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   polyline_codec: ^0.1.6
   flutter_polyline_points: ^2.1.0
   flutter_dotenv: ^5.2.1
+  socket_io_client: ^3.0.2
+  web_socket_channel: ^3.0.2
 
 dev_dependencies:
   flutter_test:
