updated eye tracking with ocr

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "java.configuration.updateBuildConfiguration": "interactive",
-  "cmake.sourceDirectory": "C:/NUS/AI_Challenge/driving_security/frontend/des_frontend/linux"
+  "cmake.sourceDirectory": "C:/Users/choym/OneDrive/Desktop/Driving Enhancement System/driving_security/frontend/des_frontend/linux"
 }
